--- a/package.json
+++ b/package.json
@@ -5,15 +5,35 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/progress-bar-android": "^1.0.5",
+    "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/bottom-tabs": "^7.3.8",
+    "@react-navigation/native": "^7.1.4",
     "expo": "~52.0.43",
+    "expo-av": "~15.0.2",
+    "expo-background-fetch": "~13.0.6",
+    "expo-device": "~7.0.3",
+    "expo-notifications": "~0.29.14",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.6",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "victory-native": "^41.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
